# dedisp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
src/: CMakeLists.txt  kernels.cuh
